[package]
name = "mh-zx-driver"
version = "0.1.0"
authors = ["Constantine Verutin <cverutin@gmail.com>"]
edition = "2018"

[dependencies.embedded-hal]
version = "0.2"

[dependencies.nb]
version = "0.1"

[dev-dependencies]
embedded-hal-mock = "0.7"

# Dependencies for prometheus exporter example
[dependencies.linux-embedded-hal]
optional = true
version = "0.3"

[dependencies.prometheus]
optional = true
version = "0.7"

[dependencies.prometheus_exporter]
optional = true
version = "0.4"

[dependencies.log]
optional = true
version = "0.4"

[dependencies.env_logger]
optional = true
version = "0.4"


[features]
examples = ["linux-embedded-hal", "prometheus", "prometheus_exporter", "env_logger", "log"]

[[example]]
name = "prometheus_exporter"
required-features = ["examples"]
