[package]
name = "mh-zx-driver"
version = "0.1.0"
authors = ["Constantine Verutin <cverutin@gmail.com>"]
edition = "2018"
description = "MH-Z* family (MH-Z14/Z19/Z19B) CO2 sensor driver built on top of `embedded-hal` primitives."

repository = "https://github.com/xaep/mh-zx-driver"
readme = "README.md"
license = "Apache-2.0"
categories = ["embedded", "no-std"]
keywords = ["mh-z19", "embedded", "sensor"]

[dependencies.embedded-hal]
version = "0.2"

[dependencies.nb]
version = "0.1"

[dev-dependencies]
embedded-hal-mock = "0.7.2"

# Dependencies for prometheus exporter example
[dependencies.linux-embedded-hal]
optional = true
version = "0.3"

[dependencies.prometheus]
optional = true
version = "0.7"

[dependencies.prometheus_exporter]
optional = true
version = "0.4"

[dependencies.log]
optional = true
version = "0.4"

[dependencies.env_logger]
optional = true
version = "0.7"

[dependencies.futures]
optional = true
version = "0.3.5"

[features]
default = []
examples = ["linux-embedded-hal", "prometheus", "prometheus_exporter", "env_logger", "log"]
async = ["futures"]


[[example]]
name = "prometheus_exporter"
required-features = ["examples"]
