[package]
name = "mh-zx-driver"
version = "0.3.0"
authors = ["David Kleingeld", "Constantine Verutin <cverutin@gmail.com>"]
edition = "2018"
description = "MH-Z* family (MH-Z14/Z19/Z19B) CO2 sensor driver built on top of `embedded-hal` primitives."

repository = "https://github.com/dvdsk/mh-zx-driver"
readme = "README.md"
license = "Apache-2.0"
categories = ["embedded", "no-std"]
keywords = ["mh-z19", "embedded", "sensor"]

[features]
thiserror = ["dep:thiserror"]
serde = ["dep:serde"]
# derive's MaxSize on Error enum
postcard = ["dep:postcard"]

[dependencies]
defmt = "0.3"
thiserror = { version = "1.0.38", optional = true }
serde = { version = "1.0", features = ["derive"], default-features = false, optional = true }
postcard = { version = "1.0.8", features = ["experimental-derive"], optional = true }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

[dev-dependencies]
embedded-hal-mock = "0.7.2"
