[package]
name = "linux-prometheus-exporter"
version = "0.1.0"
authors = ["Constantine Verutin <cverutin@gmail.com>"]
edition = "2018"

[dependencies]
mh-zx-driver = { path = "../../" }
linux-embedded-hal = "0.3"
nb = "0.1"
prometheus = "0.7"
prometheus_exporter = "0.4"
log = "0.4"
env_logger = "0.7"
embedded-hal = "*"

